--- a/icon-font.scss
+++ b/icon-font.scss
@@ -15,6 +15,9 @@
   font-style: normal;
   font-size: 24px;
 
+  width: 1em !important;
+  height: 1em !important;
+
   line-height: 1;
 
   white-space: nowrap;
